// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Error > renders with as correctly 1`] = `
"<main class="min-h-[calc(100vh-var(--ui-header-height))] flex flex-col items-center justify-center text-center">
  <p class="text-base font-semibold text-primary">404</p>
  <h1 class="mt-2 text-4xl sm:text-5xl font-bold text-highlighted text-balance">Not Found</h1>
  <p class="mt-4 text-lg text-muted text-balance">The page you are looking for does not exist.</p>
  <div class="mt-8 flex items-center justify-center gap-6"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span class="truncate">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`Error > renders with class correctly 1`] = `
"<div class="flex flex-col items-center justify-center text-center min-h-full">
  <p class="text-base font-semibold text-primary">404</p>
  <h1 class="mt-2 text-4xl sm:text-5xl font-bold text-highlighted text-balance">Not Found</h1>
  <p class="mt-4 text-lg text-muted text-balance">The page you are looking for does not exist.</p>
  <div class="mt-8 flex items-center justify-center gap-6"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span class="truncate">Back to home</span>
      <!--v-if-->
    </button></div>
</div>"
`;

exports[`Error > renders with clear correctly 1`] = `
"<div class="min-h-[calc(100vh-var(--ui-header-height))] flex flex-col items-center justify-center text-center">
  <p class="text-base font-semibold text-primary">404</p>
  <h1 class="mt-2 text-4xl sm:text-5xl font-bold text-highlighted text-balance">Not Found</h1>
  <p class="mt-4 text-lg text-muted text-balance">The page you are looking for does not exist.</p>
  <div class="mt-8 flex items-center justify-center gap-6"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span class="truncate">Home</span>
      <!--v-if-->
    </button></div>
</div>"
`;

exports[`Error > renders with default slot correctly 1`] = `
"<div class="min-h-[calc(100vh-var(--ui-header-height))] flex flex-col items-center justify-center text-center">
  <p class="text-base font-semibold text-primary">404</p>
  <h1 class="mt-2 text-4xl sm:text-5xl font-bold text-highlighted text-balance">Not Found</h1>
  <p class="mt-4 text-lg text-muted text-balance">The page you are looking for does not exist.</p>
  <div class="mt-8 flex items-center justify-center gap-6"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span class="truncate">Back to home</span>
      <!--v-if-->
    </button></div>
</div>"
`;

exports[`Error > renders with error correctly 1`] = `
"<div class="min-h-[calc(100vh-var(--ui-header-height))] flex flex-col items-center justify-center text-center">
  <p class="text-base font-semibold text-primary">404</p>
  <h1 class="mt-2 text-4xl sm:text-5xl font-bold text-highlighted text-balance">Not Found</h1>
  <p class="mt-4 text-lg text-muted text-balance">The page you are looking for does not exist.</p>
  <div class="mt-8 flex items-center justify-center gap-6"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span class="truncate">Back to home</span>
      <!--v-if-->
    </button></div>
</div>"
`;

exports[`Error > renders with links slot correctly 1`] = `
"<div class="min-h-[calc(100vh-var(--ui-header-height))] flex flex-col items-center justify-center text-center">
  <p class="text-base font-semibold text-primary">404</p>
  <h1 class="mt-2 text-4xl sm:text-5xl font-bold text-highlighted text-balance">Not Found</h1>
  <p class="mt-4 text-lg text-muted text-balance">The page you are looking for does not exist.</p>
  <div class="mt-8 flex items-center justify-center gap-6">Links slot</div>
</div>"
`;

exports[`Error > renders with message slot correctly 1`] = `
"<div class="min-h-[calc(100vh-var(--ui-header-height))] flex flex-col items-center justify-center text-center">
  <p class="text-base font-semibold text-primary">404</p>
  <h1 class="mt-2 text-4xl sm:text-5xl font-bold text-highlighted text-balance">Not Found</h1>
  <p class="mt-4 text-lg text-muted text-balance">Message slot</p>
  <div class="mt-8 flex items-center justify-center gap-6"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span class="truncate">Back to home</span>
      <!--v-if-->
    </button></div>
</div>"
`;

exports[`Error > renders with redirect correctly 1`] = `
"<div class="min-h-[calc(100vh-var(--ui-header-height))] flex flex-col items-center justify-center text-center">
  <p class="text-base font-semibold text-primary">404</p>
  <h1 class="mt-2 text-4xl sm:text-5xl font-bold text-highlighted text-balance">Not Found</h1>
  <p class="mt-4 text-lg text-muted text-balance">The page you are looking for does not exist.</p>
  <div class="mt-8 flex items-center justify-center gap-6"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span class="truncate">Back to home</span>
      <!--v-if-->
    </button></div>
</div>"
`;

exports[`Error > renders with statusCode slot correctly 1`] = `
"<div class="min-h-[calc(100vh-var(--ui-header-height))] flex flex-col items-center justify-center text-center">
  <p class="text-base font-semibold text-primary">Status code slot</p>
  <h1 class="mt-2 text-4xl sm:text-5xl font-bold text-highlighted text-balance">Not Found</h1>
  <p class="mt-4 text-lg text-muted text-balance">The page you are looking for does not exist.</p>
  <div class="mt-8 flex items-center justify-center gap-6"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span class="truncate">Back to home</span>
      <!--v-if-->
    </button></div>
</div>"
`;

exports[`Error > renders with statusMessage slot correctly 1`] = `
"<div class="min-h-[calc(100vh-var(--ui-header-height))] flex flex-col items-center justify-center text-center">
  <p class="text-base font-semibold text-primary">404</p>
  <h1 class="mt-2 text-4xl sm:text-5xl font-bold text-highlighted text-balance">Status message slot</h1>
  <p class="mt-4 text-lg text-muted text-balance">The page you are looking for does not exist.</p>
  <div class="mt-8 flex items-center justify-center gap-6"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span class="truncate">Back to home</span>
      <!--v-if-->
    </button></div>
</div>"
`;

exports[`Error > renders with ui correctly 1`] = `
"<div class="min-h-[calc(100vh-var(--ui-header-height))] flex flex-col items-center justify-center text-center">
  <p class="text-base font-semibold text-primary">404</p>
  <h1 class="mt-2 text-4xl sm:text-5xl font-bold text-highlighted text-balance">Not Found</h1>
  <p class="mt-4 text-lg text-muted text-balance">The page you are looking for does not exist.</p>
  <div class="flex items-center justify-center gap-6 mt-16"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span class="truncate">Back to home</span>
      <!--v-if-->
    </button></div>
</div>"
`;
